[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "act"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "absl-py>=2.3.1",
    "dm-control>=1.0.31",
    "dm-env>=1.6",
    "einops>=0.8.1",
    "grpcio>=1.74.0",
    "h5py>=3.14.0",
    "immutabledict>=4.2.1",
    "matplotlib>=3.10.5",
    "mediapy>=1.2.4",
    "mujoco>=3.3.5",
    "opencv-python>=4.12.0.88",
    "packaging>=25.0",
    "pexpect>=4.9.0",
    "pillow>=11.3.0",
    "pyquaternion>=0.9.9",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "rospkg>=1.6.0",
    "safari-sdk>=2.35.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[project.optional-dependencies]
inference = [
    "safari-sdk>=2.4.0"
]

[tool.setuptools.package-data]
"aloha_sim" = ["assets/**"]

[tool.setuptools.packages.find]
where = ["."]
